src/components/TheHeader/TheHeader.module.scss
@import 'styles';

.Header {
  background-color: $DARK;
  padding: 20px 20px;
  @include media($SCREEN_FULLHD) {
    padding: 20px 0;
  }

  &__logo {
    display: block;
    color: $WHITE;
    @include transition(color);
    &:hover {
      color: $GOLD;
    }
    &_descr {
      font-family: $SECOND_FONT;
      @include text(rem(30), 400, inherit);
      line-height: 166.667%;
      letter-spacing: 0.6px;
    }
  }

  &__nav {
    position: relative;
    @include flex(flex-start, center);

    &_iconProfile,
    &_iconNav {
      fill: $WHITE;
      @include transition(fill);
      cursor: pointer;
      &:hover {
        fill: $GOLD;
      }
      @include media($SCREEN_DESKTOP) {
        margin-left: 40px;
      }
    }

    &_iconNav {
      display: block;
      margin-left: 40px;
      @include media($SCREEN_DESKTOP) {
        display: none;
      }
    }
  }
}

// Navigation
.List {
  position: absolute;
  top: 44px;
  right: -20px;
  width: 330px;
  padding: 30px 0 100px;
  background-color: $DARK;
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 2;
  @include media($SCREEN_DESKTOP) {
    width: fit-content;
    padding: 0;
    position: static;
    @include flex(flex-start, center);
  }

  &__item {
    width: max-content;
    margin-bottom: 30px;
    &:last-child {
      margin-bottom: 0;
    }
    @include media($SCREEN_DESKTOP) {
      margin-bottom: 0;
      margin-right: 30px;
      &:last-child {
        margin-right: 0;
      }
    }
  }

  &__link {
    position: relative;
    display: block;
    @include text(rem(20), 400, $WHITE);
    line-height: 250%;
    text-transform: capitalize;
    @include transition(color);
    &::after {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      height: 2px;
      width: 0%;
      background-color: $GOLD;
      @include transition(width);
    }

    &:hover {
      color: $GOLD;
    }
    &:hover::after {
      width: 100%;
    }
  }
}

.Container {
  @include flex(space-between, center);
}

.Mobile {
  display: flex;
}

